fix: set z-index in Presentation component

--- a/src/Components/UI/Presentation/Presentation.css
+++ b/src/Components/UI/Presentation/Presentation.css
@@ -7,6 +7,7 @@
 
 .presentation-button {
   margin-top: 24px;
+  z-index: 2;
 }
 
 .presentation-main h1 {
@@ -20,6 +21,7 @@
 
 .presentation-main text {
   font: normal normal normal 18px/24px Archivo;
+  z-index: 2;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1200px) {
